@@ -1219,6 +1219,7 @@ multisite_builtin_views.update({
                                 'service_active_checks_enabled',
                                 'summary_host',
                                 'serviceregex',
+                                'service_display_name',
                                 'check_command',
                                 'hoststate',
                                 'svcstate',
@@ -1284,6 +1285,7 @@ multisite_builtin_views.update({
                           ('svc_in_downtime', None),
                           ('svc_in_notifper', None),
                           ('svc_notifper', None),
+                          ('service_display_name', None),
 			  ('check_manpage', None),
                           ('svc_custom_notes', None),
                           ('svc_pnpgraph', None),
