@@ -128,6 +128,7 @@ multisite_sorters["host"] = {
 
 #                      name           title                    column                       sortfunction
 declare_simple_sorter("svcdescr",                _("Service description"),         "service_description",        cmp_simple_string)
+declare_simple_sorter("svcdispname",             _("Service alternative display name"),   "service_display_name",  cmp_simple_string)
 declare_simple_sorter("svcoutput",               _("Service plugin output"),       "service_plugin_output",      cmp_simple_string)
 declare_simple_sorter("svc_long_plugin_output",  _("Long output of check plugin"), "service_long_plugin_output", cmp_simple_string)
 declare_simple_sorter("site",                    _("Site"),                        "site",                       cmp_simple_string)
