@@ -10,6 +10,9 @@
     * 0044 FIX: LDAP: Fixed error with empty groups during non nested group sync...
     * 0045 FIX: LDAP: Fixed error when synchronizing non nested groups to roles...
 
+    WATO:
+    * 0053: New rule for configuring the display_name of a service...
+
     Reporting & Availability:
     * 0051: Option for showing timeline directly in availability table...
     * 0052: Visual colorization of availability according to levels...
